--- a/src/app/shared/components/toast-message/toast-message.component.scss
+++ b/src/app/shared/components/toast-message/toast-message.component.scss
@@ -26,17 +26,17 @@ div{
     animation: slideInFromRight 1s forwards;
     animation-iteration-count: 1; 
     @include all.desktop{
-        animation: slideInFromRight-bigscreen 1s forwards;
+        // animation: slideInFromRight-bigscreen 1s forwards;
     }
     @include all.bigscreen{
-        animation: slideInFromRight-bigscreen 1s forwards;
+        // animation: slideInFromRight-bigscreen 1s forwards;
     }
     @include all.tablet{
         bottom: 10rem;
-        animation: slideInFromRight-tablet 1s forwards;
+        // animation: slideInFromRight-tablet 1s forwards;
     }   
     @include all.mobile{
-        animation:slideInFromRight-mobile 1s forwards;
+        // animation:slideInFromRight-mobile 1s forwards;
         padding: 1.6rem;
         width: auto;
     }
